in header nav sub sub has issue z-index so slove it

--- a/src/2-styles/3-layout/_1header.scss
+++ b/src/2-styles/3-layout/_1header.scss
@@ -108,6 +108,7 @@ nav {
     width: 100%;
     top:100%;
     left:0;
+    z-index:999;
 }
 // desktop version 
 @media(min-width:35em){
