--- a/src/2-styles/main.css
+++ b/src/2-styles/main.css
@@ -796,6 +796,7 @@ nav {
   width: 100%;
   top: 100%;
   left: 0;
+  z-index: 999;
 }
 
 @media (min-width: 35em) {
